--- a/styles/body.css
+++ b/styles/body.css
@@ -1,8 +1,9 @@
 * {
-    font-family: Roboto, Arial, sans-serif;
-    
+    font-family: "Roboto", sans-serif;
+    margin: 0;  
+    padding: 0;
 }
-body{
+.body-container {
     background-color: black;
     color: white;
 }
@@ -11,7 +12,6 @@ body{
     display: inline-block;
     width: 400px;
     margin: 0 15px 10px 0;
-    background-color: rgb(255, 0, 0);
 }
 .video-thumbnail {
     width: 100%;
@@ -30,7 +30,7 @@ body{
 }
 .video-title {
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 500;
     margin: 0px 0px 5px 0px;
     
     width: 350px;
