--- a/styles/body.css
+++ b/styles/body.css
@@ -6,21 +6,37 @@
 .body-container {
     background-color: black;
     color: white;
+    padding: 90px 0 0 130px;
 }
 
 .video-container{
     display: inline-block;
     width: 400px;
-    margin: 0 15px 10px 0;
+    margin: 0 15px 20`px 0;
+    z-index: 0;
+}
+.video-thumbnail-container{
+    position: relative;
 }
 .video-thumbnail {
     width: 100%;
     border-radius: 20px;
 }
+.video-length{
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    background-color: black;
+    color: white;
+    padding: 5px 7px;
+    border: none;
+    border-radius: 5px;
+}
 .video-info{
     display: flex;
     vertical-align: top;
     margin-top: 8px;
+    padding: 10px;
 }
 .channel-profile{
     width: 35px;
@@ -32,7 +48,6 @@
     font-size: 16px;
     font-weight: 500;
     margin: 0px 0px 5px 0px;
-    
     width: 350px;
     display: block;
 }
