--- a/styles/body.css
+++ b/styles/body.css
@@ -12,7 +12,7 @@
 .video-container{
     display: inline-block;
     width: 400px;
-    margin: 0 15px 20`px 0;
+    margin: 0 15px 20px 0;
     z-index: 0;
 }
 .video-thumbnail-container{
