--- a/styles/body.css
+++ b/styles/body.css
@@ -3,6 +3,9 @@
     margin: 0;  
     padding: 0;
 }
+button{
+    cursor: pointer;
+}
 .body-container {
     background-color: black;
     color: white;
